# cassinologia

./: README.md  app.py  dev.sh  pyproject.toml
core/: bank.py  constants.py  game.py  player.py  slot.py  utils.py
static/: app.css  app.js
templates/: index.html  slot_desenho.html
