[tool.poetry]
name = "cassinologia"
version = "0.1.0"
description = ""
authors = ["Guilherme Iazzetta <guilherme.iazzetta@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.111.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
